<?xml version="1.0"?>
<package format="2">
  <name>elel329_cam_src_pub</name>
  <version>0.1.0</version>
  <description>ELEL329 ROS assignment camera publisher</description>
  <maintainer email="jebarria@alumnos.uach.cl">Jorge Barría</maintainer>
  <license>BSD</license>
  <author email="jebarria@alumnos.uach.cl">Jorge Barría</author>
  <depend>usb_cam</depend>
  <build_depend>catkin</build_depend>
</package>
